--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 			<hr>
 			<p>Pork filet mignon leberkas, tail swine venison pancetta turkey shoulder brisket chalkers likes hamburgers.</p>
 		</div>
+		<div class="grid-5">
+			<h3>Extra Content</h3>
+			<p>Capicola doner turkey tail swine pork belly shank, t-bone prosciutto pastrami pork chop ground round.</p>
+			<hr>
+			<p>Pork filet mignon leberkas, tail swine venison pancetta turkey shoulder brisket chalkers likes hamburgers.</p>
+		</div>
 	</div>	
 	<footer class="main-footer">
 		<p>&copy;2014 Example Layout</p>
