this is added in the footer

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	</div>	
 	<footer class="main-footer">
 		<p>&copy;2014 Example Layout</p>
+		<p>Something added</p>
 	</footer>
 </body>
 </html>
